[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/Pages/EntityMenu/entityFieldItemAABB.gd" type="Script" id=1]
[ext_resource path="res://Styles/style1.tres" type="Theme" id=2]

[node name="aabb_field" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 100, 100 )
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="HBoxContainer"]
margin_top = 290.0
margin_right = 53.0
margin_bottom = 310.0
theme = ExtResource( 2 )
text = "AABB: "

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 57.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="realVal" type="TextEdit" parent="HBoxContainer/VBoxContainer"]
margin_right = 967.0
margin_bottom = 30.0
rect_min_size = Vector2( 100, 30 )
theme = ExtResource( 2 )
text = "test"
readonly = true

[node name="GridContainer" type="GridContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 34.0
margin_right = 967.0
margin_bottom = 98.0
columns = 2

[node name="TextEdit" type="TextEdit" parent="HBoxContainer/VBoxContainer/GridContainer"]
margin_right = 482.0
margin_bottom = 30.0
rect_min_size = Vector2( 100, 30 )
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )

[node name="TextEdit2" type="TextEdit" parent="HBoxContainer/VBoxContainer/GridContainer"]
margin_left = 486.0
margin_right = 967.0
margin_bottom = 30.0
rect_min_size = Vector2( 100, 30 )
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )

[node name="TextEdit3" type="TextEdit" parent="HBoxContainer/VBoxContainer/GridContainer"]
margin_top = 34.0
margin_right = 482.0
margin_bottom = 64.0
rect_min_size = Vector2( 100, 30 )
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )

[node name="TextEdit4" type="TextEdit" parent="HBoxContainer/VBoxContainer/GridContainer"]
margin_left = 486.0
margin_top = 34.0
margin_right = 967.0
margin_bottom = 64.0
rect_min_size = Vector2( 100, 30 )
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )

[connection signal="text_changed" from="HBoxContainer/VBoxContainer/GridContainer/TextEdit" to="." method="_on_TextEdit_text_changed"]
[connection signal="text_changed" from="HBoxContainer/VBoxContainer/GridContainer/TextEdit2" to="." method="_on_TextEdit2_text_changed"]
[connection signal="text_changed" from="HBoxContainer/VBoxContainer/GridContainer/TextEdit3" to="." method="_on_TextEdit3_text_changed"]
[connection signal="text_changed" from="HBoxContainer/VBoxContainer/GridContainer/TextEdit4" to="." method="_on_TextEdit4_text_changed"]
